style(image-card): fix action button spacing

--- a/packages/pharos/src/components/image-card/pharos-image-card.scss
+++ b/packages/pharos/src/components/image-card/pharos-image-card.scss
@@ -81,6 +81,7 @@
 
 .card__action-button {
   margin-left: auto;
+  display: inline-flex;
 }
 
 .card__title--hover {
